--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <Center><img src="karachi-traffic-jam.jpg" style="height:300px""width:300px"><hr></center>
 <table border="0.01">
 <TR BGCOLOR="black">
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\mm.html">HOME PAGE</FONT><TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\11.html">TERRORISM</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\13.html">WATER SHORTAGE</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\14.html">LACK OF EDUCATION</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\15.html">UNEMPLOYMENT</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\16.html">FOOD CRISIS</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\17.html">POPULATION EXPLOSIONS</FONT></TD></a>
-<TD WIDTH="170"><FONT COLOR="black"face="Calibri"><a href="C:\Users\CW\Desktop\18.html">LACK OF HEALTH CARE</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-issues/">HOME PAGE</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-terrorism/">TERRORISM</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-water/">WATER SHORTAGE</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-education/">LACK OF EDUCATION</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-unemployment/">UNEMPLOYMENT</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-food/">FOOD CRISIS</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-population/">POPULATION EXPLOSIONS</FONT></TD></a>
+<TD WIDTH="170"><FONT COLOR="WHITE"face="Calibri"><a href="https://syedumairhasan.github.io/adeel-health/">LACK OF HEALTH CARE</FONT></TD></a>
 
 </TR>
 
